--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /docroot/profiles/contrib
 /docroot/themes/contrib
 /docroot/sites/default/files
+/docroot/libraries
 
 # Ignore Composer-managed dependencies.
 vendor/
